added basic html wireframes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,48 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
 	<link rel="stylesheet" type="text/css" href="index.css" >
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
 </head>
 <body>
+	<nav role="navigation">Navigation Bar</nav>
+	<main role="main">
+		<section class="welcome_section">
+			<div class="jumbotron">
+					<h1> Hi, I'm Alfredo!<h1>
+					<h2>Fullstack developer | Active learner | Divergent Thinker</h2>
+			<div>
+		</section>
+		<section class="about_me_section">
+			<div class="about_me_info"> 
+				</h2>About Me Section</h2>
+			</div>
+		</section>
+		<section class="projects_section">
+			<div class= "project_sidebar">
+			<!-- shows project info on click -->
+				<p>Project 1 Link</p>
+				<p>Project 2 Link</p>
+				<p>Project 3 Link</p>
+			</div>
+			<div class="project_1_info"> 
+				<h2>Project #1 Info</h2>
+			</div>
+			<div class="project_2_info"> 
+				<h2>Project #2 Info</h2>
+			</div>
+			<div class="project_3_info"> 
+				<h2>Project #3 info</h2>
+			</div>
+		</section>
+		<section class= "contact_me_section">
+			<div class="contact_info">
+				<h2>Contact info here</h2>
+			</div>
+			<div class= "contact_links_container"> 
+				<h2>Contact logos here</h2>
+			</div> 
+		</section>
+	</main>
+	<footer>Footer </footer>
 </body>
 </html>
