added basic welcome banner

--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
 	<title>Alfredo Takori Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
 	<link rel="stylesheet" type="text/css" href="index.css" >
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
 </head>
 <body>
-	<nav role="navigation">Navigation Bar</nav>
-	<main role="main">
+	<header>
+		<nav role="navigation">Navigation Bar</nav>
 		<section class="welcome_section">
-			<div class="jumbotron">
-					<h1> Hi, I'm Alfredo!<h1>
-					<h2>Fullstack developer | Active learner | Divergent Thinker</h2>
-			<div>
-		</section>
-		<section class="about_me_section">
-			<div class="about_me_info"> 
-				</h2>About Me Section</h2>
+			<div class="inner_container">
+				<h1> Hi, I'm Alfredo!<h1>
+				<h2>Fullstack developer | Active learner | Divergent Thinker</h2>
 			</div>
 		</section>
+	</header>
+	<main role="main">
+		<div class="about_me_section">
+			<div class="about_me_info"> 
+				</h2>About Me Section</h2>
+		</div>
 		<section class="projects_section">
 			<div class= "project_sidebar">
-			<!-- shows project info on click -->
+
 				<p>Project 1 Link</p>
 				<p>Project 2 Link</p>
 				<p>Project 3 Link</p>
@@ -47,6 +47,7 @@
 			</div> 
 		</section>
 	</main>
+
 	<footer>Footer </footer>
 </body>
 </html>
