formatted basic nav bar

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
 	<header>
-		<nav role="navigation">Navigation Bar</nav>
 		<section class="welcome_section">
+			<nav role="navigation">
+				<ul>
+					<li><a href="#">About Me</a></li>
+					<li><a href="#">My Projects</a></li>
+					<li><a href="#">Contact Me</a></li>
+				</ul>
+			</nav>
 			<div class="inner_container">
-				<h1> Hi, I'm Alfredo!<h1>
-				<h2>Fullstack developer | Active learner | Divergent Thinker</h2>
+				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
+				<h2 class="subtitle">Fullstack developer | Active learner | Divergent Thinker</h2>
 			</div>
 		</section>
 	</header>
@@ -23,7 +29,7 @@
 		</div>
 		<section class="projects_section">
 			<div class= "project_sidebar">
-
+				<!-- On Click brings you to the projects -->
 				<p>Project 1 Link</p>
 				<p>Project 2 Link</p>
 				<p>Project 3 Link</p>
