added about me section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 	<main role="main">
 		<div class="about_me_section">
 			<div class="about_me_info"> 
-				</h2>About Me Section</h2>
+				<h2 class="about_me_title">About Me</h2>
+				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
+				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
 		<section class="projects_section">
 			<div class= "project_sidebar">
@@ -34,14 +36,15 @@
 				<p>Project 2 Link</p>
 				<p>Project 3 Link</p>
 			</div>
+			<h2 class="projects_title">My Projects</h2>
 			<div class="project_1_info"> 
-				<h2>Project #1 Info</h2>
+				<h3 class="project_title">Now Playing</h3>
 			</div>
 			<div class="project_2_info"> 
-				<h2>Project #2 Info</h2>
+				<h3 class="project_title">Mark It</h3>
 			</div>
 			<div class="project_3_info"> 
-				<h2>Project #3 info</h2>
+				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
 			</div>
 		</section>
 		<section class= "contact_me_section">
