changed project technologies section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="index.css" >
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
 	<header>
@@ -30,70 +31,51 @@
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
 		<section class="projects_section">
+			<h2 class="projects_title">My Projects</h2>
 			<div class= "project_sidebar">
 				<!-- On Click brings you to the projects -->
 				<p>Project 1 Link</p>
 				<p>Project 2 Link</p>
 				<p>Project 3 Link</p>
 			</div>
-			<h2 class="projects_title">My Projects</h2>
 			<div class="project_1_info"> 
 				<h3 class="project_title">Now Playing</h3>
 				<p class="project_description">Now Playing is an app for people who just can't decide on what movie to watch. Whether that's by indecisiveness or the fact that there are hundreds of movies out there, we won't judge! As a random movie generator, Now Playing selects movies based off of a user selected genre to give you movie information, trailers, ratings, and reviews to help you find your next favorite movie that you never knew existed. It'll even give you a movie with a random genre if you want!</p>
 				<p class="project_description">Now Playing also features a watchlist feature which gives users the ability to create a custom list of discovered movies that they would like to view movie information for again while still searching for new movies.</p>
 				<h4>Technologies Used</h4>
-				<ul class= "technologies_list">
-					<li>HTML5</li>
-					<li>CSS </li>
-					<li>Javascript </li>
-					<li>jQuery </li>
-				</ul>
-				<p>Live App Link| Repo Link</p>
+				<div class= "technologies_list">
+					<p>HTML5, CSS, Javascript, jQuery </p>
+					<div class= "app_links"> 
+						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a href="#"><i class=" fa-4x fas fa-code"></i></a>
+					</div>
+				</div>
 			</div>
 			<div class="project_2_info"> 
 				<h3 class="project_title">Mark It</h3>
 				<p class="project_description">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
 				<h4>Technologies Used</h4>
-				<ul class= "technologies_list">
-					<h5>Front-End <h5>
-					<li>HTML5</li>
-					<li>CSS</li>
-					<li>Javascript</li>
-					<li>jQuery</li>
-				</ul>
-				<ul class= "technologies_list">
-					<h5>Back-End <h5>
-					<li>Node.JS</li>
-					<li>Passport JS</li>
-					<li>TravisCI</li>
-					<li>MongoDB</li>
-					<li>Mocha + Chai</li>
-					<li>Cloudinary</li>
-				</ul>
-					<p>Live App Link| Repo Link</p>
+				<div class= "technologies_list">
+					<p>Front-End: HTML5, CSS, Javascript, jQuery </p>
+					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
+					<div class= "app_links"> 
+						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a href="#"><i class=" fa-4x fas fa-code"></i></a>
+					</div>
+				</div>
 			</div>
 			<div class="project_3_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
 				<h4>Technologies Used</h4>
-				<ul class= "technologies_list">
-					<h5>Front-End <h5>
-					<li>ReactJS</li>
-					<li>HTML5</li>
-					<li>CSS</li>
-					<li>Javascript</li>
-					<li>jQuery</li>
-				</ul>
-				<ul class= "technologies_list">
-					<h5>Back-End <h5>
-					<li>Node.JS</li>
-					<li>Passport JS</li>
-					<li>MongoDB</li>
-					<li>Mocha + Chai</li>
-					<li>TravisCI</li>
-					<li>bcrypt.js</li>
-				</ul>
-					<p>Live App Link| Repo Link</p>
+				<div class= "technologies_list">
+					<p>Front-End: ReactJS, HTML5, CSS, Javascript, jQuery </p>
+					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
+					<div class= "app_links"> 
+						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a href="#"><i class=" fa-4x fas fa-code"></i></i></a>
+					</div>
+				</div>
 			</div>
 		</section>
 		<section class= "contact_me_section">
