added <hr> and styles between sections

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 		</section>
 	</header>
 	<main role="main">
+		<span class="section_divider"><hr></span>
 		<div class="about_me_section">
 			<div class="about_me_info"> 
 				<h2 class="about_me_title">About Me</h2>
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
+		<span class="section_divider"><hr></span>
 		<section class="projects_section">
 			<h2 class="projects_title">My Projects</h2>
 			<div class= "project_sidebar">
@@ -38,6 +40,7 @@
 				<p>Project 2 Link</p>
 				<p>Project 3 Link</p>
 			</div>
+			<hr class="style2">
 			<div class="project_1_info"> 
 				<h3 class="project_title">Now Playing</h3>
 				<p class="project_description">Now Playing is an app for people who just can't decide on what movie to watch. Whether that's by indecisiveness or the fact that there are hundreds of movies out there, we won't judge! As a random movie generator, Now Playing selects movies based off of a user selected genre to give you movie information, trailers, ratings, and reviews to help you find your next favorite movie that you never knew existed. It'll even give you a movie with a random genre if you want!</p>
@@ -46,11 +49,14 @@
 				<div class= "technologies_list">
 					<p>HTML5, CSS, Javascript, jQuery </p>
 					<div class= "app_links"> 
-						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
-						<a href="#"><i class=" fa-4x fas fa-code"></i></a>
+						<h5 class= "view_app_title">Launch App</h5>
+						<a class="code_links" href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<h5 class= "view_code_title">View Code</h5>
+						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
 			</div>
+			<hr class="style2">
 			<div class="project_2_info"> 
 				<h3 class="project_title">Mark It</h3>
 				<p class="project_description">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
@@ -59,11 +65,14 @@
 					<p>Front-End: HTML5, CSS, Javascript, jQuery </p>
 					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
 					<div class= "app_links"> 
-						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
-						<a href="#"><i class=" fa-4x fas fa-code"></i></a>
+						<h5 class= "view_app_title">Launch App</h5>
+						<a class="code_links"href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<h5 class= "view_code_title">View Code</h5>
+						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
 			</div>
+			<hr class="style2">
 			<div class="project_3_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
@@ -72,20 +81,23 @@
 					<p>Front-End: ReactJS, HTML5, CSS, Javascript, jQuery </p>
 					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
 					<div class= "app_links"> 
-						<a href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
-						<a href="#"><i class=" fa-4x fas fa-code"></i></i></a>
+						<h5 class= "view_app_title">Launch App</h5>
+						<a class="code_links" href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<h5 class= "view_code_title">View Code</h5>
+						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></i></a>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section class= "contact_me_section">
 			<div class="contact_info">
-				<h2>Contact info here</h2>
+				<h2>Contact Me</h2>
 			</div>
-			<div class= "contact_links_container"> 
+			<div class= "contact_links_container">
 				<h2>Contact logos here</h2>
 			</div> 
 		</section>
+		<span class="section_divider"><hr></span>
 	</main>
 
 	<footer>Footer </footer>
