modified contact me basic layout

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links"href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
 						<h5 class= "view_code_title">View Code</h5>
-						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></a>
+						<a class="code_links" href="#"><i class="fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
 			</div>
@@ -89,17 +89,20 @@
 				</div>
 			</div>
 		</section>
+		<span class="section_divider"><hr></span>
 		<section class= "contact_me_section">
 			<div class="contact_info">
 				<h2>Contact Me</h2>
+				<p>Feel free to reach out to me or view more of my code through the following links</p>
+				<div class= "contact_links_container">
+				<i class="fa-4x fas fa-envelope fa"></i>
+				<i class="fa-4x fab fa-linkedin"></i>
+				<i class="fa-4x fab fa-github"></i>
 			</div>
-			<div class= "contact_links_container">
-				<h2>Contact logos here</h2>
-			</div> 
+			</div>
+			 
 		</section>
-		<span class="section_divider"><hr></span>
 	</main>
-
-	<footer>Footer </footer>
+	<footer>Check out the rest of my code on <i class="fab fa-github"></i></footer>
 </body>
 </html>
