--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<hr class="style2">
 			<div class="project_1_info"> 
 				<h3 class="project_title">Now Playing</h3>
+				<img class="project_screenshot" width= "80%" src="./images/Now-Playing-App.png" alt="now_playing_scrnsht">
 				<p class="project_description">Now Playing is an app for people who just can't decide on what movie to watch. Whether that's by indecisiveness or the fact that there are hundreds of movies out there, we won't judge! As a random movie generator, Now Playing selects movies based off of a user selected genre to give you movie information, trailers, ratings, and reviews to help you find your next favorite movie that you never knew existed. It'll even give you a movie with a random genre if you want!</p>
 				<p class="project_description">Now Playing also features a watchlist feature which gives users the ability to create a custom list of discovered movies that they would like to view movie information for again while still searching for new movies.</p>
 				<h4>Technologies Used</h4>
@@ -59,6 +60,7 @@
 			<hr class="style2">
 			<div class="project_2_info"> 
 				<h3 class="project_title">Mark It</h3>
+				<img class="project_screenshot" width= "80%" src="./images/Mark-It-App.png" alt="mark_it_scrnsht">
 				<p class="project_description">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
 				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
@@ -75,6 +77,7 @@
 			<hr class="style2">
 			<div class="project_3_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
+				<img class="project_screenshot" width= "80%" src="./images/Checkpoint.png" alt="checkpoint_scrnsht">
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
 				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
