replace nav with buttons

--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
 <body>
 	<header>
 		<section class="welcome_section">
-			<nav role="navigation">
-				<ul>
-					<li><a href="#">About Me</a></li>
-					<li><a href="#">My Projects</a></li>
-					<li><a href="#">Contact Me</a></li>
-				</ul>
-			</nav>
 			<div class="inner_container">
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
 				<h2 class="subtitle">Fullstack developer | Active learner | Divergent Thinker</h2>
+				<div class="nav_buttons">
+					<button class= "btn btn-primary">About Me</button>
+					<button class= "btn btn-danger">My Projects</button>
+					<button class="btn btn-success">Contact Me</button>
+				</div>
 			</div>
 		</section>
 	</header>
