added linksfor code and repos

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Alfredo Takori Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="index.css" >
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
+	<link rel="stylesheet" type="text/css" href="index.css" >
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
@@ -14,9 +14,9 @@
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
 				<h2 class="subtitle">Fullstack developer | Active learner | Divergent Thinker</h2>
 				<div class="nav_buttons">
-					<button class= "btn btn-primary">About Me</button>
-					<button class= "btn btn-danger">My Projects</button>
-					<button class="btn btn-success">Contact Me</button>
+					<button class= "btn btn-primary button_link">About Me</button>
+					<button class= "btn btn-danger button_link">My Projects</button>
+					<button class="btn btn-success button_link">Contact Me</button>
 				</div>
 			</div>
 		</section>
@@ -25,18 +25,18 @@
 		<span class="section_divider"><hr></span>
 		<div class="about_me_section">
 			<div class="about_me_info"> 
-				<h2 class="about_me_title">About Me</h2>
+				<h2 class="about_me_title section_title">About Me</h2>
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
 		<span class="section_divider"><hr></span>
 		<section class="projects_section">
-			<h2 class="projects_title">My Projects</h2>
+			<h2 class="projects_title section_title">My Projects</h2>
 			<div class= "project_sidebar">
 				<!-- On Click brings you to the projects -->
-				<p>Project 1 Link</p>
-				<p>Project 2 Link</p>
-				<p>Project 3 Link</p>
+				<a href="#"><p>Now Playing</p></a>
+				<a href="#"><p>Mark It</p></a>
+				<a href="#"><p>Checkpoint</p></a>
 			</div>
 			<hr class="style2">
 			<div class="project_1_info"> 
@@ -49,9 +49,9 @@
 					<p>HTML5, CSS, Javascript, jQuery </p>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
-						<a class="code_links" href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a class="code_links" href= "https://atakori.github.io/Now-Playing-App/"><i class="far fa-window-maximize fa-4x"></i></a>
 						<h5 class= "view_code_title">View Code</h5>
-						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></a>
+						<a class="code_links" href="https://github.com/atakori/Now-Playing-App"><i class=" fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
 			</div>
@@ -66,9 +66,9 @@
 					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
-						<a class="code_links"href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a class="code_links" href= "https://agile-ravine-63204.herokuapp.com/"><i class="far fa-window-maximize fa-4x"></i></a>
 						<h5 class= "view_code_title">View Code</h5>
-						<a class="code_links" href="#"><i class="fa-4x fas fa-code"></i></a>
+						<a class="code_links" href="https://github.com/atakori/Mark-It-App"><i class="fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
 			</div>
@@ -83,9 +83,9 @@
 					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
-						<a class="code_links" href= "#"><i class="far fa-window-maximize fa-4x"></i></a>
+						<a class="code_links" href= "https://loving-aryabhata-5ca0ff.netlify.com/"><i class="far fa-window-maximize fa-4x"></i></a>
 						<h5 class= "view_code_title">View Code</h5>
-						<a class="code_links" href="#"><i class=" fa-4x fas fa-code"></i></i></a>
+						<a class="code_links" href="https://github.com/atakori/backlog-trakker-client "><i class=" fa-4x fas fa-code"></i></i></a>
 					</div>
 				</div>
 			</div>
@@ -93,7 +93,7 @@
 		<span class="section_divider"><hr></span>
 		<section class= "contact_me_section">
 			<div class="contact_info">
-				<h2>Contact Me</h2>
+				<h2 class= "section_title">Contact Me</h2>
 				<p>Feel free to reach out to me or view more of my code through the following links</p>
 				<div class= "contact_links_container">
 				<i class="fa-4x fas fa-envelope fa"></i>
