changed checkpoint scrnt

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<hr class="style2">
 			<div class="project_3_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
-				<img class="project_screenshot" width= "80%" src="./images/Checkpoint.png" alt="checkpoint_scrnsht">
+				<img class="project_screenshot" width= "80%" src="./images/checkpoint3.png" alt="checkpoint_scrnsht">
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
 				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
