added contact me link

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 				<h2 class= "section_title">Contact Me</h2>
 				<p>Feel free to reach out to me or view more of my code through the following links</p>
 				<div class= "contact_links_container">
-				<i class="fa-4x fas fa-envelope fa"></i>
-				<i class="fa-4x fab fa-linkedin"></i>
-				<i class="fa-4x fab fa-github"></i>
+				<a href="mailto:atakori@outlook.com"><i class="fa-4x fas fa-envelope fa"></i></a>
+				<a href="https://www.linkedin.com/in/alfredo-takori-966a53b3/"><i class="fa-4x fab fa-linkedin"></i></a>
+				<a href= "https://github.com/atakori" ><i class="fa-4x fab fa-github"></i></a>
 			</div>
 			</div>
 			 
