removed about me div

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 	</header>
 	<main role="main">
 		<span class="section_divider"><hr></span>
-		<div class="about_me_section">
 			<div class="about_me_info"> 
 				<h2 class="about_me_title section_title">About Me</h2>
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
@@ -62,8 +61,8 @@
 				<p class="project_description">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
 				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
-					<p>Front-End: HTML5, CSS, Javascript, jQuery </p>
-					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
+					<p><strong>Front-End:</strong> HTML5, CSS, Javascript, jQuery </p>
+					<p><strong>Back-End:</strong> Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links" href= "https://agile-ravine-63204.herokuapp.com/"><i class="far fa-window-maximize fa-4x"></i></a>
@@ -79,8 +78,8 @@
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
 				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
-					<p>Front-End: ReactJS, HTML5, CSS, Javascript, jQuery </p>
-					<p>Back-End: Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
+					<p><strong>Front-End:</strong> ReactJS, HTML5, CSS, Javascript, jQuery </p>
+					<p><strong>Back-End:</strong> Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links" href= "https://loving-aryabhata-5ca0ff.netlify.com/"><i class="far fa-window-maximize fa-4x"></i></a>
@@ -88,7 +87,6 @@
 						<a class="code_links" href="https://github.com/atakori/backlog-trakker-client "><i class=" fa-4x fas fa-code"></i></i></a>
 					</div>
 				</div>
-			</div>
 		</section>
 		<span class="section_divider"><hr></span>
 		<section class= "contact_me_section">
