added bitmoji about_me

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section class="welcome_section">
 			<div class="inner_container">
 				<h1 class="main_title"> Hi, I'm Alfredo!</h1>
-				<h2 class="subtitle">Fullstack developer | Active learner | Divergent Thinker</h2>
+				<h2 class="subtitle">Fullstack developer | Lifelong learner | Divergent Thinker</h2>
 				<div class="nav_buttons">
 					<button class= "btn btn-primary button_link">About Me</button>
 					<button class= "btn btn-danger button_link">My Projects</button>
@@ -26,12 +26,13 @@
 		<span class="section_divider"><hr></span>
 			<div class="about_me_info"> 
 				<h2 class="about_me_title section_title">About Me</h2>
+				<img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi">
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
 		<span class="section_divider"><hr></span>
 		<section class="projects_section">
-			<h2 class="projects_title section_title">My Projects</h2>
+			<h2 class="my_projects_header"><i class="fab fa-medapps"></i> <span class="project_span_title">My Projects </span> <i class="fab fa-medapps"></i></h2>
 			<div class= "project_sidebar">
 				<!-- On Click brings you to the projects -->
 				<a href="#"><p>Now Playing</p></a>
