--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<span class="section_divider"><hr></span>
 			<div class="about_me_info"> 
 				<h2 class="about_me_title section_title">About Me</h2>
-				<img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi">
+				<div class="bitmoji_container"><img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi"> </div>
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
