added responsive design for project 1

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<span class="section_divider"><hr></span>
 			<div class="about_me_info"> 
 				<h2 class="about_me_title section_title">About Me</h2>
-				<div class="bitmoji_container"><img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi"> </div>
+				<div class="image_container"><img class="bitmoji_hi" src="./images/about_me1.png" alt="bitmoji_hi"> </div>
 				<p class="about_me_description"> I am a fullstack developer and recent graduate of the Full Stack Engineering bootcamp at Thinkful. Coding is one of my favorite things to do because creating the logic that transforms concepts into reality is both challenging and rewarding. Also, it's honestly just really fun. I love discovering new and exciting libraries and developing solutions to optimize efficiency.</p>
 				<p class="about_me_description">In my spare time, I can be found dancing for contemporary and hip-hop choreographers around Atlanta, training in Wing Chun at my martial arts school, or chugging can after can of Dr. Pepper. Aside from coding, my current learning projects are classical guitar and game development.</p>
 		</div>
@@ -42,12 +42,15 @@
 			<hr class="style2">
 			<div class="project_1_info"> 
 				<h3 class="project_title">Now Playing</h3>
-				<img class="project_screenshot" width= "80%" src="./images/Now-Playing-App.png" alt="now_playing_scrnsht">
+				<div class="image_container">
+					<img class="project_screenshot" width= "80%" src="./images/Now-Playing-App.png" alt="now_playing_scrnsht">
+				</div>
 				<p class="project_description">Now Playing is an app for people who just can't decide on what movie to watch. Whether that's by indecisiveness or the fact that there are hundreds of movies out there, we won't judge! As a random movie generator, Now Playing selects movies based off of a user selected genre to give you movie information, trailers, ratings, and reviews to help you find your next favorite movie that you never knew existed. It'll even give you a movie with a random genre if you want!</p>
 				<p class="project_description">Now Playing also features a watchlist feature which gives users the ability to create a custom list of discovered movies that they would like to view movie information for again while still searching for new movies.</p>
-				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
+				<h4 class= "tech_title">Technologies Used</h4>
 					<p>HTML5, CSS, Javascript, jQuery </p>
+				</div>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links" href= "https://atakori.github.io/Now-Playing-App/"><i class="far fa-window-maximize fa-4x"></i></a>
