added responsive design for remaining projects

--- a/index.html
+++ b/index.html
@@ -61,13 +61,16 @@
 			</div>
 			<hr class="style2">
 			<div class="project_2_info"> 
-				<h3 class="project_title">Mark It</h3>
-				<img class="project_screenshot" width= "80%" src="./images/Mark-It-App.png" alt="mark_it_scrnsht">
-				<p class="project_description">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
-				<h4>Technologies Used</h4>
+				<h3 class="project_title left">Mark It</h3>
+				<div class="image_container right">
+					<img class="project_screenshot" width= "80%" src="./images/Mark-It-App.png" alt="mark_it_scrnsht">
+				</div>
+				<p class="project_description left">Mark it is an app that allows users to easily upload and view daily dance classes. Choreographers can create classes and upload videos to them to keep them in one easy to access site. Dancers can also add these classes to their accounts to make sure they never miss a class video! When a user creates their own class, they become the adminstrator of that created class. The administrators currently have the ability to delete classes from the database. However, administrative features will be extended in future versions of the application.</p>
 				<div class= "technologies_list">
+				<h4 class="tech_title">Technologies Used</h4>
 					<p><strong>Front-End:</strong> HTML5, CSS, Javascript, jQuery </p>
 					<p><strong>Back-End:</strong> Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, Cloudinary</p>
+				</div>
 					<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links" href= "https://agile-ravine-63204.herokuapp.com/"><i class="far fa-window-maximize fa-4x"></i></a>
@@ -75,22 +78,23 @@
 						<a class="code_links" href="https://github.com/atakori/Mark-It-App"><i class="fa-4x fas fa-code"></i></a>
 					</div>
 				</div>
-			</div>
 			<hr class="style2">
 			<div class="project_3_info"> 
 				<h3 class="project_title">Checkpoint - Backlog Trakker</h3>
-				<img class="project_screenshot" width= "80%" src="./images/checkpoint3.png" alt="checkpoint_scrnsht">
+				<div class="image_container reduced">
+					<img class="project_screenshot" width= "80%" src="./images/checkpoint3.png" alt="checkpoint_scrnsht">
+				</div>
 				<p class="project_description">Checkpoint is a responsive full-stack app that allows gamers to keep track of their video game backlog by allowing them to add games to their virtual gaming collection, document their game progress, and see how close they are to completing their games and overall backlog.</p>
-				<h4>Technologies Used</h4>
 				<div class= "technologies_list">
+				<h4 class="tech_title">Technologies Used</h4>
 					<p><strong>Front-End:</strong> ReactJS, HTML5, CSS, Javascript, jQuery </p>
 					<p><strong>Back-End:</strong> Node.JS, Passport JS, TravisCI, MongoDB, Mocha + Chai, bcrypt.js</p>
-					<div class= "app_links"> 
+				</div>
+				<div class= "app_links"> 
 						<h5 class= "view_app_title">Launch App</h5>
 						<a class="code_links" href= "https://loving-aryabhata-5ca0ff.netlify.com/"><i class="far fa-window-maximize fa-4x"></i></a>
 						<h5 class= "view_code_title">View Code</h5>
 						<a class="code_links" href="https://github.com/atakori/backlog-trakker-client "><i class=" fa-4x fas fa-code"></i></i></a>
-					</div>
 				</div>
 		</section>
 		<span class="section_divider"><hr></span>
