changed contact_me footer design

--- a/index.html
+++ b/index.html
@@ -99,16 +99,19 @@
 		</section>
 		<span class="section_divider"><hr></span>
 		<section class= "contact_me_section">
-			<div class="contact_info">
-				<h2 class= "section_title">Contact Me</h2>
+			<div class="contact_container">
+				<h2 class= "section_title black_background">Contact Me</h2>
+					<div class="contact_info">
 					<img class="contact_card" src= "./images/contact_card.png" alt="contact_card">
-				<p>Feel free to reach out to me or view more of my code through the following links</p>
-				<div class= "contact_links_container">
-				<a href="mailto:atakori@outlook.com"><i class="contact_icon fa-4x fas fa-envelope fa"></i></a>
-				<a href="https://www.linkedin.com/in/alfredo-takori-966a53b3/"><i class="contact_icon fa-4x fab fa-linkedin"></i></a>
-				<a href= "https://github.com/atakori" ><i class="contact_icon fa-4x fab fa-github"></i></a>
-			</div>
-		</div>
+					<p class="blue_anchor_font">Feel free to reach out to me or view more of my code through the following links</p>
+					<div class= "contact_links_container">
+						<a href="mailto:atakori@outlook.com"><i class="contact_icon fa-4x fas fa-envelope fa"></i></a>
+						<a href="https://www.linkedin.com/in/alfredo-takori-966a53b3/"><i class="contact_icon fa-4x fab fa-linkedin"></i></a>
+						<a href= "https://github.com/atakori" ><i class="contact_icon fa-4x fab fa-github"></i></a>
+					</div>
+					</div>
+				</div>
+			
 		</section>
 	</main>
 	<footer>Check out the rest of my code on <i class="fab fa-github"></i></footer>
